--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Barlow');
-@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@600&family=Quicksand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap');
 
 body {
-	
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
-	font-family: 'Quicksand', sans-serif;
+	font-family: 'Dancing Script', cursive;
 	font-weight: 600;
 }
 .container {
@@ -15,6 +14,8 @@ body {
 	position: relative;
 	overflow: hidden;
 }
+
+
 a {
 	text-decoration: none;
 }
@@ -50,7 +51,7 @@ h1.main, p.demos {
 	line-height: 100px;
 	height: 90px;
 	margin-top: -68px;
-	font-size: 23px;
+	font-size: 30px;
 	width: 100%;
 	text-align: center;
 	color: transparent;
@@ -78,7 +79,7 @@ h1.main, p.demos {
 	animation-delay: 6s;
 }
 .sp-container h2.frame-4 {
-	font-size: 23px;
+	font-size: 30px;
 	-webkit-animation-delay: 9s;
 	-moz-animation-delay: 9s;
 	-ms-animation-delay: 9s;
@@ -90,7 +91,7 @@ h1.main, p.demos {
 	-ms-animation: none;
 	animation: none;
 	color: transparent;
-	text-shadow: 0px 0px 1px rgb(255, 255, 255);
+	text-shadow: 0px 0px 1px #ea80b0;
 }
 .sp-container h2.frame-5 span {
 	-webkit-animation: blurFadeIn 3s ease-in 12s backwards;
@@ -98,7 +99,7 @@ h1.main, p.demos {
 	-ms-animation: blurFadeIn 3s ease-in 12s backwards;
 	animation: blurFadeIn 3s ease-in 12s backwards;
 	color: transparent;
-	text-shadow: 0px 0px 1px rgb(255, 255, 255);
+	text-shadow: 0px 0px 1px #ea80b0;
 }
 .sp-container h2.frame-5 span:nth-child(2) {
 	-webkit-animation-delay: 13s;
@@ -142,9 +143,9 @@ h1.main, p.demos {
 	line-height: 100px;
 	width: 100px;
 	height: 100px;
-	background: #fff;
+	background: #ea80b0;
 	color: #3f1616;
-	font-size: 23px;
+	font-size: 30px;
 	-webkit-border-radius: 50%;
 	-moz-border-radius: 50%;
 	border-radius: 50%;
@@ -160,41 +161,41 @@ h1.main, p.demos {
 }
 .sp-circle-link:hover {
 	background: #85373b;
-	color: #fff;
+	color: #ea80b0;
 }
 /**/
 
 @-webkit-keyframes blurFadeInOut {
 	0% {
 		opacity: 0;
-		text-shadow: 0px 0px 40px #fff;
+		text-shadow: 0px 0px 40px #ea80b0;
 		-webkit-transform: scale(1.3);
 	}
 	20%, 75% {
 		opacity: 1;
-		text-shadow: 0px 0px 1px #fff;
+		text-shadow: 0px 0px 1px #ea80b0;
 		-webkit-transform: scale(1);
 	}
 	100% {
 		opacity: 0;
-		text-shadow: 0px 0px 50px #fff;
+		text-shadow: 0px 0px 50px #ea80b0;
 		-webkit-transform: scale(0);
 	}
 }
 @-webkit-keyframes blurFadeIn {
 	0% {
 		opacity: 0;
-		text-shadow: 0px 0px 40px #fff;
+		text-shadow: 0px 0px 40px #ea80b0;
 		-webkit-transform: scale(1.3);
 	}
 	50% {
 		opacity: 0.5;
-		text-shadow: 0px 0px 10px #fff;
+		text-shadow: 0px 0px 10px #ea80b0;
 		-webkit-transform: scale(1.1);
 	}
 	100% {
 		opacity: 1;
-		text-shadow: 0px 0px 1px #fff;
+		text-shadow: 0px 0px 1px #ea80b0;
 		-webkit-transform: scale(1);
 	}
 }
@@ -227,29 +228,29 @@ h1.main, p.demos {
 @-moz-keyframes blurFadeInOut {
 	0% {
 		opacity: 0;
-		text-shadow: 0px 0px 40px #fff;
+		text-shadow: 0px 0px 40px #ea80b0;
 		-moz-transform: scale(1.3);
 	}
 	20%, 75% {
 		opacity: 1;
-		text-shadow: 0px 0px 1px #fff;
+		text-shadow: 0px 0px 1px #ea80b0;
 		-moz-transform: scale(1);
 	}
 	100% {
 		opacity: 0;
-		text-shadow: 0px 0px 50px #fff;
+		text-shadow: 0px 0px 50px #ea80b0;
 		-moz-transform: scale(0);
 	}
 }
 @-moz-keyframes blurFadeIn {
 	0% {
 		opacity: 0;
-		text-shadow: 0px 0px 40px #fff;
+		text-shadow: 0px 0px 40px #ea80b0;
 		-moz-transform: scale(1.3);
 	}
 	100% {
 		opacity: 1;
-		text-shadow: 0px 0px 1px #fff;
+		text-shadow: 0px 0px 1px #ea80b0;
 		-moz-transform: scale(1);
 	}
 }
@@ -282,34 +283,34 @@ h1.main, p.demos {
 @keyframes blurFadeInOut {
 	0% {
 		opacity: 0;
-		text-shadow: 0px 0px 40px #fff;
+		text-shadow: 0px 0px 40px #ea80b0;
 		transform: scale(1.3);
 	}
 	20%, 75% {
 		opacity: 1;
-		text-shadow: 0px 0px 1px #fff;
+		text-shadow: 0px 0px 1px #ea80b0;
 		transform: scale(1);
 	}
 	100% {
 		opacity: 0;
-		text-shadow: 0px 0px 50px #fff;
+		text-shadow: 0px 0px 50px #ea80b0;
 		transform: scale(0);
 	}
 }
 @keyframes blurFadeIn {
 	0% {
 		opacity: 0;
-		text-shadow: 0px 0px 40px #fff;
+		text-shadow: 0px 0px 40px #ea80b0;
 		transform: scale(1.3);
 	}
 	50% {
 		opacity: 0.5;
-		text-shadow: 0px 0px 10px #fff;
+		text-shadow: 0px 0px 10px #ea80b0;
 		transform: scale(1.1);
 	}
 	100% {
 		opacity: 1;
-		text-shadow: 0px 0px 1px #fff;
+		text-shadow: 0px 0px 1px #ea80b0;
 		transform: scale(1);
 	}
 }
