--- a/style.css
+++ b/style.css
@@ -1,10 +1,5 @@
-html,
 body {
-  height: 100%;
+  background: #000;
+  overflow: hidden;
   margin: 0;
-}
-canvas {
-  width: 100%;
-  height: 100%;
-  display: block;
 }
